# aidevs3

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
common/: aidevs3_responsehandler.py  aidevs3_taskhandler.py  constants.py  files_read_write_download.py
local_tests/: groq_test.py  python_logger.py
src/audio_tools/: convert_mp3_using_whisper.py
src/common_aidevs/: aidevs3_taskhandler.py  files_read_write_download.py  llm-tools-merger.py  measurement.py
src/common_llm/: llm_enums.py  llm_llama_handler.py  llm_model_factory.py  llm_openAI_handler.py  llm_vision_model_factory.py  llm_vision_ollama_handler.py  llm_vision_openAI_handler.py  llm_whisper_handler.py
src/markdown_tools/: add_description_to_markdown_by_txt_files.py  extract_context_around_embedded_file.py  split_markdown_by_paragraph.py
src/md_files_tools/: add_description_to_markdown.py
src/qdrant_tools/: qdrant_utilities.py
src/tools/: find_project_root.py  json_extractor_from_llm_response.py  perform_ocr.py  text_splitter.py
src/video_tools/: describe_with_llm.py  use_ocr_with_llm.py
tasks/C00L01/: c00l01_helloapi.py
tasks/C01L01/: c01L01_xyz.py  crawlee_ag3nts_sample.py  (+2 more)
tests_local/: chunk_splitter_usage_sample.py  denoise_file.py  fail_markdown_crawler_test.py  groq_test.py  mardown_crawlee.py  markdown_crawler_test.py  markdown_replace.py  markdown_replace_structure.py  markdown_splitter.py  paddleocr_test.py  paddleocr_test2.py  paddleocr_test3.py  split_markdown_and_create_context.py  test_logger.py  test_loguru.py  test_ocr_class.py
(+128 files in other folders)
