[tool.poetry]
name = "aidevs3"
version = "0.1.0"
description = "Files for AIDevs_3 course"
authors = ["Dominik Jeziorski <d.jeziorski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
icecream = "^2.1.3"
loguru = "^0.7.2"
groq = "^0.11.0"
ollama = "^0.3.3"
llama-index = "^0.11.21"
langfuse = "^2.53.9"
sympy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
